src/objects/DMAPP__TVFilter__c/DMAPP__TVFilter__c.object-meta.xml
<CustomObject>
    <description>Frontline Sales Manager custom filter</description>
    <label>TVFilter</label>
    <nameField>
        <label>FSMFilter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TVFilters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>