src/objects/DMAPP__TVFilter__c/fields/DMAPP__Field9__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Field9__c</fullName>
    <description>Name of the field we&apos;re to test against</description>
    <label>Field9</label>
    <length>255</length>
    <type>Text</type>
</CustomField>