src/objects/DMAPP__TVFilter__c/fields/DMAPP__Operator9__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Operator9__c</fullName>
    <label>Operator9</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>contains</fullName>
                <default>true</default>
                <label>contains</label>
            </value>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>greaterOrEqual</fullName>
            </value>
            <value>
                <fullName>greaterThan</fullName>
            </value>
            <value>
                <fullName>lessOrEqual</fullName>
            </value>
            <value>
                <fullName>lessThan</fullName>
            </value>
            <value>
                <fullName>notContain</fullName>
            </value>
            <value>
                <fullName>notEqual</fullName>
            </value>
            <value>
                <fullName>startsWith</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>